Fix alignment of reaction icon and reaction counter

--- a/wcfsetup/install/files/style/ui/reactions.scss
+++ b/wcfsetup/install/files/style/ui/reactions.scss
@@ -44,6 +44,8 @@
 .reactionCount{
 	@include wcfFontSmall;
 	
+	vertical-align: middle;
+	
 	&::before {
 		content: ' × ';
 	}
